--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "type-check": "tsc --noEmit && npm run design-system:check",
+    "design-system:check": "ts-node scripts/check-design-system.ts",
+    "lint": "eslint src --ext .ts,.tsx",
+    "check": "npm run type-check && npm run lint"
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.4.1",
@@ -37,8 +41,15 @@
     "react-native-url-polyfill": "^3.0.0"
   },
   "devDependencies": {
+    "@types/node": "^20.0.0",
     "@types/react": "~19.1.0",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "babel-preset-expo": "^54.0.6",
+    "eslint": "^8.0.0",
+    "eslint-plugin-no-relative-import-paths": "^1.5.0",
+    "eslint-plugin-react-native": "^4.0.0",
+    "ts-node": "^10.9.0",
     "typescript": "~5.9.2"
   },
   "private": true
