--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.8.2",
     "@react-navigation/native": "^7.1.19",
+    "@react-navigation/native-stack": "^7.6.2",
     "@supabase/supabase-js": "^2.80.0",
     "expo": "~54.0.22",
     "expo-apple-authentication": "~8.0.7",
