--- a/app.json
+++ b/app.json
@@ -27,7 +27,8 @@
     },
     "plugins": [
       "expo-apple-authentication",
-      "expo-web-browser"
+      "expo-web-browser",
+      "expo-font"
     ]
   }
 }
