--- a/package.json
+++ b/package.json
@@ -16,23 +16,24 @@
     "@expo-google-fonts/nunito": "^0.4.2",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/slider": "5.0.1",
     "@react-navigation/bottom-tabs": "^7.8.2",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.6.2",
     "@supabase/supabase-js": "^2.80.0",
-    "expo": "~54.0.22",
-    "expo-apple-authentication": "~8.0.7",
-    "expo-auth-session": "~7.0.8",
-    "expo-blur": "~15.0.7",
-    "expo-constants": "~18.0.10",
-    "expo-crypto": "~15.0.7",
-    "expo-dev-client": "~6.0.17",
-    "expo-font": "~14.0.9",
-    "expo-haptics": "~15.0.7",
-    "expo-linear-gradient": "~15.0.7",
-    "expo-status-bar": "~3.0.8",
-    "expo-store-review": "~9.0.8",
-    "expo-web-browser": "~15.0.9",
+    "expo": "~54.0.29",
+    "expo-apple-authentication": "~8.0.8",
+    "expo-auth-session": "~7.0.10",
+    "expo-blur": "~15.0.8",
+    "expo-constants": "~18.0.12",
+    "expo-crypto": "~15.0.8",
+    "expo-dev-client": "~6.0.20",
+    "expo-font": "~14.0.10",
+    "expo-haptics": "~15.0.8",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-status-bar": "~3.0.9",
+    "expo-store-review": "~9.0.9",
+    "expo-web-browser": "~15.0.10",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
