--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "check": "npm run type-check && npm run lint"
   },
   "dependencies": {
+    "@dicebear/avatars": "^4.10.8",
+    "@dicebear/collection": "^9.2.4",
+    "@dicebear/core": "^9.2.4",
     "@expo-google-fonts/nunito": "^0.4.2",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
@@ -33,7 +36,10 @@
     "expo-linear-gradient": "~15.0.8",
     "expo-status-bar": "~3.0.9",
     "expo-store-review": "~9.0.9",
+    "expo-video": "^3.0.15",
     "expo-web-browser": "~15.0.10",
+    "lottie-ios": "^3.4.0",
+    "lottie-react-native": "^7.3.4",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-calendars": "^1.1313.0",
