--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "foodhabit",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "index.tsx",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
@@ -17,30 +17,35 @@
     "@dicebear/collection": "^9.2.4",
     "@dicebear/core": "^9.2.4",
     "@expo-google-fonts/nunito": "^0.4.2",
+    "@expo/metro-config": "~54.0.12",
+    "@expo/metro-runtime": "^6.1.2",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/slider": "5.0.1",
     "@react-navigation/bottom-tabs": "^7.8.2",
     "@react-navigation/native": "^7.1.19",
-    "@react-navigation/native-stack": "^7.6.2",
+    "@react-navigation/native-stack": "^7.9.0",
     "@supabase/supabase-js": "^2.80.0",
-    "expo": "~54.0.29",
+    "expo": "^54.0.30",
     "expo-apple-authentication": "~8.0.8",
     "expo-auth-session": "~7.0.10",
     "expo-blur": "~15.0.8",
+    "expo-camera": "^17.0.10",
     "expo-constants": "~18.0.12",
     "expo-crypto": "~15.0.8",
     "expo-dev-client": "~6.0.20",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
+    "expo-image-picker": "^17.0.10",
     "expo-linear-gradient": "~15.0.8",
     "expo-status-bar": "~3.0.9",
     "expo-store-review": "~9.0.9",
     "expo-video": "^3.0.15",
     "expo-web-browser": "~15.0.10",
-    "lottie-ios": "^3.4.0",
+    "lottie-ios": "4.5.0",
     "lottie-react-native": "^7.3.4",
     "react": "19.1.0",
+    "react-dom": "^19.1.0",
     "react-native": "0.81.5",
     "react-native-calendars": "^1.1313.0",
     "react-native-circular-progress-indicator": "^4.4.2",
@@ -49,14 +54,17 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
-    "react-native-url-polyfill": "^3.0.0"
+    "react-native-url-polyfill": "^3.0.0",
+    "react-native-web": "^0.21.2",
+    "react-native-worklets": "^0.7.1"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "@types/react": "~19.1.0",
+    "@types/react-dom": "^19.2.3",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "babel-preset-expo": "^54.0.6",
+    "babel-preset-expo": "~54.0.9",
     "eslint": "^8.0.0",
     "eslint-plugin-no-relative-import-paths": "^1.5.0",
     "eslint-plugin-react-native": "^4.0.0",
