--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "expo-haptics": "~15.0.8",
     "expo-image-picker": "^17.0.10",
     "expo-linear-gradient": "~15.0.8",
+    "expo-notifications": "~0.32.15",
     "expo-status-bar": "~3.0.9",
     "expo-store-review": "~9.0.9",
     "expo-video": "^3.0.15",
@@ -45,7 +46,7 @@
     "lottie-ios": "4.5.0",
     "lottie-react-native": "^7.3.4",
     "react": "19.1.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-calendars": "^1.1313.0",
     "react-native-circular-progress-indicator": "^4.4.2",
@@ -56,12 +57,12 @@
     "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "^0.21.2",
-    "react-native-worklets": "^0.7.1"
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
-    "@types/react": "~19.1.0",
-    "@types/react-dom": "^19.2.3",
+    "@types/react": "~19.1.10",
+    "@types/react-dom": "~19.1.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "babel-preset-expo": "~54.0.9",
