--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,12 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
+    "jsx": "react-native",
+    "lib": [
+      "ES2020"
+    ],
+    "module": "ESNext",
+    "moduleResolution": "bundler",
     "strict": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
@@ -25,7 +31,9 @@
   "ts-node": {
     "compilerOptions": {
       "module": "commonjs",
-      "lib": ["ES2020"]
+      "lib": [
+        "ES2020"
+      ]
     }
   },
   "exclude": [
