--- a/app.json
+++ b/app.json
@@ -12,7 +12,7 @@
     "splash": {
       "image": "./assets/icon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#fcefde"
+      "backgroundColor": "#2E2345"
     },
     "ios": {
       "supportsTablet": true,
