--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "expo-image-picker": "^17.0.10",
     "expo-linear-gradient": "~15.0.8",
     "expo-notifications": "~0.32.15",
+    "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "expo-store-review": "~9.0.9",
     "expo-video": "^3.0.15",
