--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "Food Habit",
     "slug": "foodhabit",
-    "owner": "ashwiin11",
+    "owner": "foodhabit",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -19,8 +19,18 @@
       "bundleIdentifier": "com.foodhabit.app",
       "usesAppleSignIn": true,
       "associatedDomains": [
+        "applinks:foodhabit.com",
         "applinks:foodhabit.com"
-      ]
+      ],
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false,
+        "NSCameraUsageDescription": "GutScan needs camera access to scan your meals and analyze their gut health impact.",
+        "NSPhotoLibraryUsageDescription": "GutScan needs photo library access to select meal images for analysis.",
+        "NSUserTrackingUsageDescription": "This allows us to provide you with personalized health insights and improve our service."
+      },
+      "config": {
+        "usesNonExemptEncryption": false
+      }
     },
     "web": {
       "favicon": "./assets/icon.png",
@@ -50,6 +60,11 @@
           "photosPermission": "Allow GutScan to access your photos to select meal images"
         }
       ]
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "a729b1be-9c50-4ae8-a28a-96cbe598b18a"
+      }
+    }
   }
 }
