--- a/package.json
+++ b/package.json
@@ -14,22 +14,17 @@
   },
   "dependencies": {
     "@dicebear/avatars": "^4.10.8",
-    "@dicebear/collection": "^9.2.4",
-    "@dicebear/core": "^9.2.4",
     "@expo-google-fonts/nunito": "^0.4.2",
     "@expo/metro-config": "~54.0.12",
     "@expo/metro-runtime": "^6.1.2",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
-    "@react-native-community/slider": "5.0.1",
     "@react-navigation/bottom-tabs": "^7.8.2",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.9.0",
     "@supabase/supabase-js": "^2.80.0",
     "expo": "^54.0.30",
     "expo-apple-authentication": "~8.0.8",
-    "expo-auth-session": "~7.0.10",
-    "expo-blur": "~15.0.8",
     "expo-camera": "^17.0.10",
     "expo-constants": "~18.0.12",
     "expo-crypto": "~15.0.8",
@@ -42,20 +37,17 @@
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "expo-store-review": "~9.0.9",
-    "expo-video": "^3.0.15",
     "expo-web-browser": "~15.0.10",
-    "lottie-ios": "4.5.0",
-    "lottie-react-native": "^7.3.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-calendars": "^1.1313.0",
-    "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-purchases": "^9.6.12",
+    "react-native-purchases-ui": "^9.6.12",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "15.12.1",
+    "react-native-svg": "15.15.1",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "^0.21.2",
     "react-native-worklets": "0.5.1"
