--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Food Habit",
+    "name": "GutScan",
     "slug": "foodhabit",
     "owner": "foodhabit",
     "version": "1.0.0",
