--- a/app.json
+++ b/app.json
@@ -15,7 +15,7 @@
       "backgroundColor": "#2E2345"
     },
     "ios": {
-      "supportsTablet": true,
+      "supportsTablet": false,
       "bundleIdentifier": "com.foodhabit.app",
       "usesAppleSignIn": true,
       "associatedDomains": [
@@ -25,8 +25,7 @@
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false,
         "NSCameraUsageDescription": "GutScan needs camera access to scan your meals and analyze their gut health impact.",
-        "NSPhotoLibraryUsageDescription": "GutScan needs photo library access to select meal images for analysis.",
-        "NSUserTrackingUsageDescription": "This allows us to provide you with personalized health insights and improve our service."
+        "NSPhotoLibraryUsageDescription": "GutScan needs photo library access to select meal images for analysis."
       },
       "config": {
         "usesNonExemptEncryption": false
