--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "type-check": "tsc --noEmit",
     "design-system:check": "ts-node scripts/check-design-system.ts",
     "lint": "eslint src --ext .ts,.tsx",
-    "check": "npm run type-check && npm run lint"
+    "check": "npm run type-check && npm run lint",
+    "android": "expo run:android"
   },
   "dependencies": {
     "@dicebear/avatars": "^4.10.8",
