--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "check": "npm run type-check && npm run lint"
   },
   "dependencies": {
+    "@expo-google-fonts/chewy": "^0.4.0",
+    "@expo-google-fonts/fredoka": "^0.4.1",
+    "@expo-google-fonts/fredoka-one": "^0.2.3",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-navigation/bottom-tabs": "^7.9.1",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.9.0",
     "@supabase/supabase-js": "^2.80.0",
@@ -21,14 +25,20 @@
     "expo-constants": "~18.0.13",
     "expo-crypto": "~15.0.8",
     "expo-dev-client": "~6.0.20",
+    "expo-font": "^14.0.10",
+    "expo-linear-gradient": "~15.0.8",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "expo-web-browser": "~15.0.10",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-url-polyfill": "^3.0.0"
+    "react-native-svg": "15.12.1",
+    "react-native-url-polyfill": "^3.0.0",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
