--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "expo": "~54.0.31",
     "expo-apple-authentication": "~8.0.8",
     "expo-asset": "~12.0.12",
+    "expo-camera": "~17.0.10",
     "expo-constants": "~18.0.13",
     "expo-crypto": "~15.0.8",
     "expo-dev-client": "~6.0.20",
     "expo-font": "^14.0.10",
+    "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "~15.0.8",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
