--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "GutScan",
+    "name": "Gut Buddy",
     "slug": "foodhabit",
     "owner": "foodhabit",
     "version": "1.0.0",
@@ -36,7 +36,8 @@
       }
     },
     "plugins": [
-      "expo-apple-authentication"
+      "expo-apple-authentication",
+      "react-native-purchases"
     ],
     "extra": {
       "eas": {
