--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "check": "npm run type-check && npm run lint"
   },
   "dependencies": {
+    "@bacons/apple-targets": "^3.0.7",
     "@expo-google-fonts/chewy": "^0.4.0",
     "@expo-google-fonts/fredoka": "^0.4.1",
     "@expo-google-fonts/fredoka-one": "^0.2.3",
@@ -19,7 +20,7 @@
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.9.0",
     "@supabase/supabase-js": "^2.80.0",
-    "expo": "~54.0.31",
+    "expo": "~54.0.32",
     "expo-apple-authentication": "~8.0.8",
     "expo-asset": "~12.0.12",
     "expo-camera": "~17.0.10",
@@ -28,7 +29,7 @@
     "expo-dev-client": "~6.0.20",
     "expo-device": "~8.0.10",
     "expo-file-system": "~19.0.21",
-    "expo-font": "^14.0.10",
+    "expo-font": "~14.0.11",
     "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "~15.0.8",
     "expo-notifications": "~0.32.16",
@@ -45,6 +46,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-shared-group-preferences": "^1.1.24",
     "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^3.0.0",
     "zustand": "^5.0.10"
@@ -54,7 +56,7 @@
     "@types/react": "~19.1.10",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "babel-preset-expo": "~54.0.9",
+    "babel-preset-expo": "~54.0.10",
     "eslint": "^8.0.0",
     "eslint-plugin-react-native": "^4.0.0",
     "typescript": "~5.9.2"
