--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "android": "expo run:android",
     "type-check": "tsc --noEmit",
     "lint": "eslint src --ext .ts,.tsx",
-    "check": "npm run type-check && npm run lint"
+    "check": "npm run type-check && npm run lint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@bacons/apple-targets": "^3.0.7",
@@ -49,9 +52,11 @@
     "react-native-shared-group-preferences": "^1.1.24",
     "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^3.0.0",
+    "react-native-worklets": "0.7.1",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.0.0",
     "@types/react": "~19.1.10",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -59,6 +64,8 @@
     "babel-preset-expo": "~54.0.10",
     "eslint": "^8.0.0",
     "eslint-plugin-react-native": "^4.0.0",
+    "jest": "^30.2.0",
+    "ts-jest": "^29.4.6",
     "typescript": "~5.9.2"
   },
   "private": true
