--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "react-native-shared-group-preferences": "^1.1.24",
     "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^3.0.0",
-    "react-native-worklets": "0.7.1",
+    "react-native-worklets": "0.5.1",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
@@ -63,6 +63,7 @@
     "@typescript-eslint/parser": "^6.0.0",
     "babel-preset-expo": "~54.0.10",
     "eslint": "^8.0.0",
+    "eslint-plugin-no-relative-import-paths": "^1.6.1",
     "eslint-plugin-react-native": "^4.0.0",
     "jest": "^30.2.0",
     "ts-jest": "^29.4.6",
