--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "foodhabit",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "main": "index.tsx",
   "scripts": {
     "start": "expo start",
@@ -15,17 +15,19 @@
   },
   "dependencies": {
     "@bacons/apple-targets": "^3.0.7",
-    "@expo-google-fonts/chewy": "^0.4.0",
     "@expo-google-fonts/fredoka": "^0.4.1",
     "@expo-google-fonts/fredoka-one": "^0.2.3",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-firebase/analytics": "^23.8.6",
+    "@react-native-firebase/app": "^23.8.6",
     "@react-navigation/bottom-tabs": "^7.9.1",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.9.0",
     "@supabase/supabase-js": "^2.80.0",
-    "expo": "~54.0.32",
+    "expo": "~54.0.33",
     "expo-apple-authentication": "~8.0.8",
     "expo-asset": "~12.0.12",
+    "expo-build-properties": "~1.0.10",
     "expo-camera": "~17.0.10",
     "expo-constants": "~18.0.13",
     "expo-crypto": "~15.0.8",
@@ -56,7 +58,7 @@
     "zustand": "^5.0.10"
   },
   "devDependencies": {
-    "@types/jest": "^30.0.0",
+    "@types/jest": "29.5.14",
     "@types/node": "^20.0.0",
     "@types/react": "~19.1.10",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -65,7 +67,7 @@
     "eslint": "^8.0.0",
     "eslint-plugin-no-relative-import-paths": "^1.6.1",
     "eslint-plugin-react-native": "^4.0.0",
-    "jest": "^30.2.0",
+    "jest": "~29.7.0",
     "ts-jest": "^29.4.6",
     "typescript": "~5.9.2"
   },
