--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
     "scheme": "foodhabit",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/icon.png",
+      "image": "./assets/image.png",
       "imageWidth": 200,
       "backgroundColor": "#ffffff"
     },
@@ -41,7 +41,7 @@
     },
     "plugins": [
       ["expo-splash-screen", {
-        "image": "./assets/icon.png",
+        "image": "./assets/image.png",
         "imageWidth": 200,
         "backgroundColor": "#ffffff"
       }],
