--- a/app.json
+++ b/app.json
@@ -44,7 +44,14 @@
         }
       ],
       "expo-apple-authentication",
-      "react-native-purchases"
+      [
+        "expo-build-properties",
+        {
+          "ios": {
+            "useFrameworks": "static"
+          }
+        }
+      ]
     ],
     "extra": {
       "eas": {
