--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-firebase/analytics": "^23.8.6",
     "@react-native-firebase/app": "^23.8.6",
-    "@react-navigation/bottom-tabs": "^7.9.1",
-    "@react-navigation/native": "^7.1.19",
+    "@react-navigation/bottom-tabs": "^7.14.0",
+    "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.9.0",
+    "@react-navigation/stack": "^7.7.2",
     "@supabase/supabase-js": "^2.80.0",
     "expo": "~54.0.33",
     "expo-apple-authentication": "~8.0.8",
