--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo": "~54.0.33",
     "expo-apple-authentication": "~8.0.8",
     "expo-asset": "~12.0.12",
+    "expo-auth-session": "~7.0.10",
     "expo-build-properties": "~1.0.10",
     "expo-camera": "~17.0.10",
     "expo-constants": "~18.0.13",
@@ -37,6 +38,7 @@
     "expo-haptics": "~15.0.8",
     "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "~15.0.8",
+    "expo-linking": "~8.0.11",
     "expo-notifications": "~0.32.16",
     "expo-sharing": "~14.0.8",
     "expo-splash-screen": "~31.0.13",
