--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@react-navigation/native-stack": "^7.9.0",
     "@react-navigation/stack": "^7.7.2",
     "@supabase/supabase-js": "^2.80.0",
+    "@types/d3-shape": "^3.1.8",
+    "d3-shape": "^3.2.0",
     "expo": "~54.0.33",
     "expo-apple-authentication": "~8.0.8",
     "expo-asset": "~12.0.12",
