--- a/app.json
+++ b/app.json
@@ -40,7 +40,7 @@
         {
           "image": "./assets/icon.png",
           "imageWidth": 200,
-          "backgroundColor": "#ffffff"
+          "backgroundColor": "#060A14"
         }
       ],
       "expo-apple-authentication",
