--- a/app.json
+++ b/app.json
@@ -12,7 +12,7 @@
     "splash": {
       "image": "./assets/icon.png",
       "imageWidth": 200,
-      "backgroundColor": "#060A14"
+      "backgroundColor": "#0B1219"
     },
     "ios": {
       "supportsTablet": false,
@@ -40,7 +40,7 @@
         {
           "image": "./assets/icon.png",
           "imageWidth": 200,
-          "backgroundColor": "#060A14"
+          "backgroundColor": "#0B1219"
         }
       ],
       "expo-apple-authentication",
